--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
             <ul class="mobile-menu">
               <li class="mobile-menu-item">
-                <a href="./index.html" class="mobile-menu-item link">Studio</a></li>
+                <a href="./index.html" class="mobile-menu-item link webpage" >Studio</a></li>
               <li class="mobile-menu-item">
                 <a href="./portfolio.html" class="mobile-menu-item link">Portfolio</a></li>
               <li class="mobile-menu-item">
@@ -295,7 +295,7 @@
       <section class="list-team">
         <div class="container">
           <h2 class="title-our-team">Our Team</h2>
-          <ul class="list">
+          <ul class="list team-list">
             <li class="list-shadow">
               <div class="image">
                 <img 
@@ -630,12 +630,14 @@
               name="subscribe"
               placeholder="E-mail"
             />
-            <button class="button-subscribe" type="submit">
-              Subscribe
-              <svg class="subscribe-icon">
-                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
-              </svg>
-            </button>
+            <div class="position-button-subscribe">
+              <button class="button-subscribe"  type="submit">
+                Subscribe
+                <svg class="subscribe-icon">
+                  <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </form>
         </div>
       </div>
