--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
             ><span class="logo-color">WEB</span>STUDIO</a
           >
           <ul class="site-nav">
-            <li><a href="./index.html" class="webpage">Studio</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="./index.html">Studio</a></li>
+            <li><a href="./portfolio.html"class="webpage">Portfolio</a></li>
             <li><a href="#">Contacts</a></li>
           </ul>
         </nav>
@@ -72,7 +72,7 @@
               <li class="mobile-menu-item">
                 <a href="./index.html" class="mobile-menu-item link">Studio</a></li>
               <li class="mobile-menu-item">
-                <a href="./portfolio.html" class="mobile-menu-item link">Portfolio</a></li>
+                <a href="./portfolio.html" class="mobile-menu-item link webpage">Portfolio</a></li>
               <li class="mobile-menu-item">
                 <a href="#" class="mobile-menu-item link">Contacts</a></li>
               
@@ -409,21 +409,14 @@
           </ul>
         </div>
 
-        <div class="box-subscribe">
-          <h4 class="social-media">Subscribe</h4>
-          <form>
-            <input
-              class="input-email"
-              type="email"
-              name="subscribe"
-              placeholder="E-mail"
-            />
-            <button class="button-subscribe" type="submit">
+            <div class="position-button-subscribe">
+            <button class="button-subscribe"  type="submit">
               Subscribe
               <svg class="subscribe-icon">
                 <use href="./images/symbol-defs.svg#icon-icon-send"></use>
               </svg>
             </button>
+          </div>
           </form>
         </div>
       </div>
